--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        
+        <div id="newtask"></div>
     </div>
 </body>
 <script src="script.js"></script>
