add input text, button and style new task

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <div id="newtask"></div>
+        <div id="newtask">
+            <input type="text" placeholder="Task to be done..">
+            <button id="push">Add</button>
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
