--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <input type="text" placeholder="Task to be done..">
             <button id="push">Add</button>
         </div>
+        <div id="tasks"></div>
     </div>
 </body>
 <script src="script.js"></script>
